--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Currículo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <h1>Sobre Mim</h1>
-        <h3>Comecei meus estudos com programação em 2020 com Python mas ultimamente tenho me focado em desenvolvimento web (front-end) com HTML, CSS e JavaScript.</h3>
-    </header>
+    <main>
+        <h1>Artur Maia Coqueiro</h1>
+        <h2>Sobre Mim</h2>
+        <p>Atualmente focado em desenvolvimento web (front-end) com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
+        <h2>Hard Skills</h2>
+        <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JavaScrpt</li>
+            <li>Git/Github</li>
+        </ul>
+        <h2>Objetivo</h2>
+        <p>Oportunidade como júnior<br>Interesse em UX, media query, React e node.js</p>
+
+    </main>
 </body>
 </html>
