--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
             <li>JavaScrpt</li>
             <li>Git/Github</li>
         </ul>
+        <h2>Projetos Pessoais</h2>
+        <ul>
+            <li><a href="">Mascote do Android</a></li>
+            <li><a href="">Tabuada</a></li>
+            <li><a href="">Analisador de Números</a></li>
+        </ul>
         <h2>Objetivo</h2>
         <p>Oportunidade como júnior<br>Interesse em UX, media query, React e node.js</p>
 
