--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
         </ul>
         <h2>Projetos Pessoais</h2>
         <ul>
-            <li><a href="">Mascote do Android</a></li>
-            <li><a href="">Tabuada</a></li>
-            <li><a href="">Analisador de Números</a></li>
+            <li><a href="https://arturcoqueiro.github.io/Mascote_Android/">Mascote do Android</a></li>
+            <li><a target="_blank" href="https://arturcoqueiro.github.io/Tabuada/">Tabuada</a></li>
+            <li><a href="https://arturcoqueiro.github.io/Analisador_Numeros/">Analisador de Números</a></li>
+            <li><a href="https://arturcoqueiro.github.io/Formulario-DEVs/">Formulário</a></li>
+            <li><a href="">PSP e suas versões</a></li>
         </ul>
         <h2>Objetivo</h2>
         <p>Oportunidade como júnior<br>Interesse em UX, media query, React e node.js</p>
