--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         </ul>
         <h2>Projetos Pessoais</h2>
         <ul>
-            <li><a href="https://arturcoqueiro.github.io/Mascote_Android/">Mascote do Android</a></li>
-            <li><a target="_blank" href="https://arturcoqueiro.github.io/Tabuada/">Tabuada</a></li>
-            <li><a href="https://arturcoqueiro.github.io/Analisador_Numeros/">Analisador de Números</a></li>
-            <li><a href="https://arturcoqueiro.github.io/Formulario-DEVs/">Formulário</a></li>
+            <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Mascote_Android/">Mascote do Android</a></li>
+            <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Tabuada/">Tabuada</a></li>
+            <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Analisador_Numeros/">Analisador de Números</a></li>
+            <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Formulario-DEVs/">Formulário</a></li>
             <li><a href="">PSP e suas versões</a></li>
         </ul>
         <h2>Objetivo</h2>
