--- a/index.html
+++ b/index.html
@@ -11,15 +11,11 @@
 <body>
     <main>
         <h1>Artur Maia Coqueiro</h1>
+        <h2 class="tit">Front End Developer - Júnior</h2>
         <h2>Sobre Mim</h2>
-        <p>Atualmente focado em desenvolvimento web (front-end) com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
-        <h2>Hard Skills</h2>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScrpt</li>
-            <li>Git/Github</li>
-        </ul>
+        <p>Atualmente focado em desenvolvimento web com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
+        <h2>Experiência</h2>
+        <p>Comecei na programção em 2020 com Python, após isso estudei Git e Github e no momento, estudo Desevolvimento Web Full-stack com Node.js e JavaScript</p>
         <h2>Projetos Pessoais</h2>
         <ul>
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Mascote_Android/">Mascote do Android</a></li>
@@ -28,9 +24,6 @@
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Formulario-DEVs/">Formulário</a></li>
             <li><a href="">PSP e suas versões</a></li>
         </ul>
-        <h2>Objetivo</h2>
-        <p>Oportunidade como júnior<br>Interesse em UX, media query, React e node.js</p>
-
     </main>
 </body>
 </html>
