--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Sobre Mim</h2>
         <p>Atualmente focado em desenvolvimento web com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
         <h2>Experiência</h2>
-        <p>Comecei na programção em 2020 com Python, após isso estudei Git e Github e no momento, estudo Desevolvimento Web Full-stack com Node.js e JavaScript</p>
+        <p>Comecei na programção em 2020 com Python, após isso estudei Git e Github e no momento, estudo Desevolvimento Web Full-stack com HTML, CSS, Node.js e JavaScript</p>
         <h2>Projetos Pessoais</h2>
         <ul>
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Mascote_Android/">Mascote do Android</a></li>
