--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         <h1>Artur Maia Coqueiro</h1>
         <h2 class="tit">Front End Developer - Júnior</h2>
+        <h3><a href="mailto:arturcoqueiro018@gmail.com">arturcoqueiro018@gmail.com</a></h3>
         <h2>Sobre Mim</h2>
         <p>Atualmente focado em desenvolvimento web com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
         <h2>Experiência</h2>
