--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <h1>Artur Maia Coqueiro</h1>
-        <h2 class="tit">Front End Developer - Júnior</h2>
+        <h2 class="tit">Desenvolvedor Front End - Júnior</h2>
         <h3><a href="mailto:arturcoqueiro018@gmail.com">arturcoqueiro018@gmail.com</a></h3>
         <h2>Sobre Mim</h2>
         <p>Atualmente focado em desenvolvimento web com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
@@ -24,6 +24,12 @@
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Analisador_Numeros/">Analisador de Números</a></li>
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Formulario-DEVs/">Formulário</a></li>
             <li><a href="">PSP e suas versões</a></li>
+        </ul>
+        <h2>Contato</h2>
+        <ul>
+            <li><a href="https://github.com/arturcoqueiro">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/artur-coqueiro-744874227/">Linkedin</a></li>
+            <li><a href="mailto:arturcoqueiro018@gmail.com">Email</a></li>
         </ul>
     </main>
 </body>
