links to contact

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </ul>
         <h2>Contato</h2>
         <ul>
-            <li><a href="https://github.com/arturcoqueiro">Github</a></li>
-            <li><a href="https://www.linkedin.com/in/artur-coqueiro-744874227/">Linkedin</a></li>
-            <li><a href="mailto:arturcoqueiro018@gmail.com">Email</a></li>
+            <li><a target="_blank" rel="next" href="https://github.com/arturcoqueiro">Github</a></li>
+            <li><a target="_blank" rel="next" href="https://www.linkedin.com/in/artur-coqueiro-744874227/">Linkedin</a></li>
+            <li><a rel="next" href="mailto:arturcoqueiro018@gmail.com">Email</a></li>
         </ul>
     </main>
 </body>
