--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <h2 class="tit">Desenvolvedor Front End - Júnior</h2>
         <h3><a href="mailto:arturcoqueiro018@gmail.com">arturcoqueiro018@gmail.com</a></h3>
         <h2>Sobre Mim</h2>
-        <p>Atualmente focado em desenvolvimento web com HTML, CSS e JavaScript e me aprofundando em tais tecnologias</p>
-        <h2>Experiência</h2>
+        <p>Atualmente focado em desenvolvimento web com HTML, CSS, Bootstrap e JavaScript e me aprofundando em tais tecnologias</p>
         <p>Comecei na programção em 2020 com Python, após isso estudei Git e Github e no momento, estudo Desevolvimento Web Full-stack com HTML, CSS, Node.js e JavaScript</p>
         <h2>Projetos Pessoais</h2>
         <ul>
@@ -23,6 +22,7 @@
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Tabuada/">Tabuada</a></li>
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Analisador_Numeros/">Analisador de Números</a></li>
             <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Formulario-DEVs/">Formulário</a></li>
+            <li><a target="_blank" rel="next" href="https://arturcoqueiro.github.io/Color-Fliper/">Gerador de Cores</a></li>
         </ul>
         <h2>Contato</h2>
         <ul>
